Various improvements, bug fixes and features.
Changes to low-code.cabal:
* ScopedTypeVariables is now a common extension, although I think I
don't use it anywhere.

Changes to Bundles:
* Removed mainModule. Expect it to appear again somewhere again, though!
* Should now generate modules in correct order inside HTML... this
wasn't tested yet, though.

Changes to JS Codegen:
* Fixed a regression where records would emit semicolons instead of
commas between fields. Oops!
* Fixed a bug where records inside arrow functions would not generate
the required parenthesis, thus causing syntax errors, as JS would
interpret the record as a function with labels.
* Fixed a problem where spaces would not be generated around a binary
operator.
* Fixed a bug where else statements would sometimes add indentation where
they shouldn't, for example "else    if ...",
* Fixed a bug where if statements in a block inside else statements
would not become an "else if".
* Fixed a bug where extra semicolons would be added after every
function.

Changes to LanguageConverter:
* Converters can now use a State monad. This was required by the Logic
to JS converter.
* Added convertDef, which converts an expression if the generator state
has a Default instance.

Changes to Logic AST:
* Added a DiscardPattern, which is equivalent to starting a variable
name with _ in Haskell.
* Added syntactic sugar to match branches which only contain a return.
foo { return bar; } becomes foo => bar.

Changes to Logic Analyzer:
* Now generates information of what order modules should be included.
Requirement for JavaScript.
* Removed special check for variable starting with _, as DiscardPattern
replaces this use case.
* Various places should now check whether the number of arguments/fields
match when zipping them together.
* Fixed a bug where two distinct ADTs but with same constructor name
would get mistaken by the analyzer and thus creating some errors.
* When one statement fails with a fatal error, it will no longer

--- a/low-code.cabal
+++ b/low-code.cabal
@@ -39,6 +39,7 @@ common shared-properties
     , OverloadedStrings
     , QuasiQuotes
     , RecordWildCards
+    , ScopedTypeVariables
     , TypeFamilies
   default-language:     Haskell2010
 
@@ -138,9 +139,6 @@ library
     , Language.LowCode.Logic.Standard.Prelude
     , Language.LowCode.Logic.Structure
     , Language.LowCode.Logic.Type
-    , Language.LowCode.UI
-    , Language.LowCode.UI.AST
-    , Language.LowCode.UI.HTMLConverter
     , Utility
   if flag(lib-Werror)
     ghc-options:        -Werror
